<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Terremotos</string>
    <string name="hello_world">Hello world detalle!</string>
    <string name="btn_buscar">Buscar</string>
    <!-- Otra forma de cargar el spinner -->
    <string-array name="intensidades">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <!-- Valores del menú -->
    <string name="action_settings">Configuración</string>
    <string name="action_help">Ayuda</string>

    <!-- Activity Ayuda -->
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="texto_ayuda">Una parrafada para explicar como funciona la app</string>

    <!-- Activity Configuración <string name="title_activity_ayuda">Ayuda</string> -->


    <!-- Activity Lista de terremotos -->
    <string name="title_activity_lista">Lista de terremotos</string>
    <string name="lista_vacia">Lista de terremotos vacía</string>

    <!-- Activity Setttings -->
    <string name="url_pref">url_pref</string>
    <string name="url_pref_title">url de referencia</string>
    <string name="url_pref_summary">Introduce la url de la que obtener los datos</string>
    <string name="url_value">http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_week.atom</string>
    <string name="frecuencia">frecuencia</string>
    <string name="frecuencia_title">Frecuencia de obtención de datos</string>
    <string name="frecuencia_summary">Frecuencia de obtención de los datos del servidor</string>
    <!-- Valores de las preferencias -->
    <!-- Son los el. que van a salir en la lista del dialog -->
    <string-array name="frecuencias_entries">
        <item>Minuto</item>
        <item>Día</item>
        <item>Semana</item>
        <item>Mes</item>
        <item>Nunca</item>
    </string-array>
    <!-- Son los el. que van a salir en la lista del dialog -->
    <!-- A CAMBIAR -->
    <string-array name="frecuencias_entries_values">
        <item>Minuto</item>
        <item>Día</item>
        <item>Semana</item>
        <item>Mes</item>
        <item>Nunca</item>
    </string-array>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_detalle">DetalleActivity</string>

</resources>
