<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/url_pref"
        android:title="@string/url_pref_title"
        android:summary="@string/url_pref_summary"
        android:dialogTitle="@string/url_pref_title"/>
    <ListPreference
        android:key="@string/frecuencia"
        android:title="@string/frecuencia_title"
        android:summary="@string/frecuencia_summary"
        android:dialogTitle="@string/frecuencia_title"
        />
</PreferenceScreen>
    <!--<EditTextPreference
        android:key="@string/key_prefijo"
        android:title="Prefijo"
        android:summary="Este parámetro se emplea para meter el prefijo del saludo"
        android:dialogTitle="Escriba aquí el prefijo"
        />
    <ListPreference
        android:key="@string/key_sufijo"
        android:title="Sufijo"
        android:summary="Este parámetro se emplea para meter el sufijo del saludo"
        android:dialogTitle="Escriba aquí el sufijo"
        android:entries="@array/sufijosEntries"
        android:entryValues="@array/sufijosEntriesValues"
        />
        -->